// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Link as toggle renders correctly 1`] = `
<a
  aria-controls="collapseElement"
  aria-expanded="false"
  data-bs-toggle="collapse"
  href="#collapseElement"
  role="button"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link danger renders correctly 1`] = `
<a
  class=" link-danger"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link dark renders correctly 1`] = `
<a
  class=" link-dark"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link info renders correctly 1`] = `
<a
  class=" link-info"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link light renders correctly 1`] = `
<a
  class=" link-light"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link primary renders correctly 1`] = `
<a
  class=" link-primary"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link renders correctly 1`] = `
<a
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link secondary renders correctly 1`] = `
<a
  class=" link-secondary"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link success renders correctly 1`] = `
<a
  class=" link-success"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;

exports[`OE - Link warning renders correctly 1`] = `
<a
  class=" link-warning"
  href="#link"
  target="_blank"
>
  A simple link!
</a>
`;
